feat - getPaymentMethods
