# src/types/openapi.ts
@@ -211,6 +211,8 @@ export interface components {
             /** @description Wallet addresses for payment */
             addresses: components["schemas"]["ChainTokenStatic"][];
         };
+        /** Format: uuid */
+        UUID: string;
         CreateStaticWalletRequest: {
             /** @description ID in the client's system */
             orderId: string;
@@ -505,7 +507,7 @@ export interface operations {
             query?: never;
             header?: never;
             path: {
-                id: string;
+                id: components["schemas"]["UUID"];
             };
             cookie?: never;
         };
@@ -618,7 +620,7 @@ export interface operations {
             query?: never;
             header?: never;
             path: {
-                id: string;
+                id: components["schemas"]["UUID"];
             };
             cookie?: never;
         };
@@ -658,7 +660,7 @@ export interface operations {
             query?: never;
             header?: never;
             path: {
-                id: string;
+                id: components["schemas"]["UUID"];
             };
             cookie?: never;
         };
@@ -744,7 +746,7 @@ export interface operations {
             query?: never;
             header?: never;
             path: {
-                id: string;
+                id: components["schemas"]["UUID"];
             };
             cookie?: never;
         };
@@ -784,7 +786,7 @@ export interface operations {
             query?: never;
             header?: never;
             path: {
-                id: string;
+                id: components["schemas"]["UUID"];
             };
             cookie?: never;
         };
@@ -824,7 +826,7 @@ export interface operations {
             query?: never;
             header?: never;
             path: {
-                id: string;
+                id: components["schemas"]["UUID"];
             };
             cookie?: never;
         };
